mule-user-guide/v/3.4/pojo-class-bindings-and-factory-classes.adoc
= POJO Class Bindings and Factory Classes

Anypoint(TM) DataMapper allows you to map an interface or abstract class as a POJO. Binding in this case, refers to linking your POJO (which can be an interface or abstract class) to concrete class. Thus, when instantiating your POJO, Mule uses concrete class you specified.

*Factory class* allow you to delegate object construction to another class. In this case, your factory class must have static method called `create` that returns the object you want to instantiate.

== Assumptions

This document assumes the reader is familiar with the Anypoint(TM) DataMapper Transformer. Consult the [DataMapper User Guide and Reference] document for details. For a listing of all available tools in DataMapper, consult [DataMapper Visual Reference].

== Setting POJO Binding and Factory Definitions

. To specify bindings and factories, open the *Properities* dialog by clicking the cog icon (highlighted below) in the Output mapping pane of the DataMapper view. The Properties icon displays the output *Pojo Properties* window (below, bottom).
+
image:dmview-iconhighlight.png[dmview-iconhighlight]
+
image:pojo_factory.png[pojo_factory]

. Click *Binding Definition* or *Factory Definition* to add, remove, or edit binding or factory properties.

. Click *OK* to save changes.
