mule-user-guide/v/3.7/pojo-class-bindings-and-factory-classes.adoc
= POJO Class Bindings and Factory Classes
:keywords: anypoint studio, esb, java classes, java bindings, factory classes

Anypoint DataMapper allows you to map an interface or abstract class as a POJO. *Binding*, in this case, refers to linking your POJO (which can be an interface or abstract class) to a concrete class. Thus, when instantiating your POJO, Mule uses the concrete class you specified.

[NOTE]
====
DataMapper will continue to be fully supported in all current and future versions of Mule ESB 3.x, however it will be removed in Mule 4.0 in favour of the *Transform Message* component (based on link:https://developer.mulesoft.com/docs/display/current/DataWeave[DataWeave] code). We recommend that if you wish to take advantage of the new capabilities of DataWeave or if you start new projects, upgrade now.

A link:/mule-user-guide/v/3.7/dataweave-migrator[migration tool] is now included in Studio, which assists in converting a DataMapper map to DataWeave. Right click on a DataMapper, select *Migrate to DataWeave*, and follow the instructions.

image:dw_migrator_script.png[dw migrator]
====

**Factory classes **allow you to delegate object construction to another class. In this case, your factory class must have a static method called `create`, that returns the object you want to instantiate.

== Assumptions

This document assumes the reader is familiar with the Anypoint DataMapper Transformer. Consult the link:/mule-user-guide/v/3.7/datamapper-user-guide-and-reference[DataMapper User Guide and Reference] document for details. For a listing of all available tools in DataMapper, consult link:/mule-user-guide/v/3.7/datamapper-visual-reference[DataMapper Visual Reference].

== Setting POJO Binding and Factory Definitions

. To specify bindings and factories, open the *Properties* dialog by clicking the cog icon (highlighted below) in the Output mapping pane of the DataMapper view. The Properties icon displays the output *Pojo Properties* window (below, bottom).
+
image:overview-modif.jpeg[overview-modif] +
+
image:datamapper.POJO.classes.png[datamapper.POJO.classes]

. Click *Binding Definition* or **Factory Definition **to add, remove or edit binding or factory properties.
. Uncheck the *Cache Data in Memory* checkbox if you want DataMapper to cache process data to disk instead of in memory.
. Click *OK* to save your changes.
